# setup

./: README.md  pyproject.toml
src/setup/: __init__.py
